--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -8,19 +8,20 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
   </head>
   <body>
-    <a href="/" style="text-decoration: none;">
+    <a href="/home" style="text-decoration: none;">
       <header>
-        <h1>tbh.vc</h1>
+        <h1>welcome to www.tbh.vc</h1>
+        <a href="https://neocities.org">
+          <img src="/assets/neocities.png" alt="hosted by neocities"></img>
+        </a>
       </header>
     </a>
+    <nav>
+      hello sidebar goes here
+    </nav>
     <main>
         <h1>{{ title }}</h1>
         {{ content }}
     </main>
-    <footer>
-        <a href="https://neocities.org">
-          <img src="/assets/neocities.png" alt="hosted by neocities"></img>
-        </a>
-    </footer>
   </body>
 </html>
