--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,28 @@
 body {
   margin: 0;
   background-color: gainsboro;
-  color: white;
   font-family: "Comic Sans MS";
 }
 
 header {
-  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
   background: linear-gradient(#8ac3e5 0 10%, #214e94);
-  width: 100%;
   color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+nav {
+  float: left;
 }
 
 main {
-  background-color: #1f1f1f;
+  background-color: whitesmoke;
   border-color: #2f2f2f;
-  border: 2px #5f5f5f solid;
-  border-radius: 10px;
+  border: 2px gray solid;
+  border-radius: 2px; 
   box-shadow: 2px 2px #4f4f4f;
   display: flex;
   flex-direction: column;
