--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -16,12 +16,20 @@
         </a>
       </header>
     </a>
-    <nav>
-      hello sidebar goes here
-    </nav>
+
     <main>
+      <nav>
+        <ul>
+          <a href="/home"><li>home</li></a>
+          <a href="/about"><li>about me</li></a>
+          <a href="/"><li>extras</li></a>
+          </li>
+        </ul>
+      </nav>
+      <section>
         <h1>{{ title }}</h1>
         {{ content }}
+      </section>
     </main>
   </body>
 </html>
