--- a/assets/style.css
+++ b/assets/style.css
@@ -17,42 +17,101 @@ header {
 nav {
   float: left;
 }
-
-main {
-  background-color: whitesmoke;
-  border-color: #2f2f2f;
-  border: 2px gray solid;
-  border-radius: 2px; 
-  box-shadow: 2px 2px #4f4f4f;
+nav ul {
+  margin: 0px 10px;
+  padding: 0;
+  list-style-type: none;
   display: flex;
   flex-direction: column;
-  margin: 20px;
-  padding: 40px;
+  column-gap: 5px;
+}
+
+nav ul a {
+  text-decoration: none;
+}
+
+nav ul li {
+  width: 300px;
+  font-family: serif;
+  color: white;
+  font-weight: bold;
+  font-size: 32px;
+  padding: 20px;
+  background: linear-gradient(#8ac3e5 0 10%, #214e94);
+  border: #8ac3e5 solid 8px;
+  transition: 0.2s filter;
+}
+
+nav ul:hover li {
+  filter: brightness(0.8);
+}
+
+nav ul li:hover {
+  filter: brightness(1);
+}
+
+section {
+  max-width: 100%;
+  background-color: whitesmoke;
+  border-color: #6f6f6f;
+  border: 2px gray solid;
+  border-radius: 2px; 
+  box-shadow: 2px 2px #8f8f8f;
+  display: flex;
+  flex-direction: column;
+  margin: 20px; 
+  padding: 50px;
+}
+
+section img {
+  max-height: 400px;
+}
+
+.text-float {
+  text-align: center;
+  max-width: 600px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 a {
   color: lightblue;
 }
 
+span {
+  text-wrap: pretty;
+}
+
 .bubble {
-  max-width: 1000px;
-  background-color: #2f2f2f;
-  margin: 5px 0;
-  padding: 20px;
-  border: #4f4f4f solid 2px;
-  border-radius: 10px;
+  margin-right: -40px;
+  min-width: 200px;
+  height: 300px;
+  color: black;
+  background: linear-gradient(white 0 10%, #8ac3e5);
+  border: #8ac3e5 solid 4px;
+  border-radius: 5px;
   transform: rotate(2deg);
   text-decoration: none;
   transition: all 0.2s;
 }
 
+.bubble h2 {
+  margin: 0;
+  padding: 10px;
+  color: white;
+  background-color: #214e94;
+}
+
 .bubble:nth-child(even) {
-  transform: rotate(-2deg);
+  transform: rotate(-1deg);
 }
 
 .bubble:hover {
   background-color: #3f3f3f;
   transform: rotate(0deg);
-  transform: scale(101%);
+  transform: scale(110%);
   z-index: 10;
 }
