--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -12,7 +12,7 @@
       <header>
         <h1>welcome to www.tbh.vc</h1>
         <a href="https://neocities.org">
-          <img src="/assets/neocities.png" alt="hosted by neocities"></img>
+          <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
         </a>
       </header>
     </a>
