--- a/assets/style.css
+++ b/assets/style.css
@@ -7,11 +7,14 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 20px;
   background: linear-gradient(#8ac3e5 0 10%, #214e94);
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+header img:hover {
+  transform: scale(110%);
 }
 
 nav {
