Added first real post and site name

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>very</title>
+    <title>tbh virtual club</title>
     <link href="/assets/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
   </head>
   <body>
     <a href="/home" style="text-decoration: none;">
       <header>
-        <h1>welcome to www.tbh.vc</h1>
+        <h1>tbh virtual club</h1>
         <a href="https://neocities.org">
           <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
         </a>
@@ -21,13 +21,13 @@
       <nav>
         <ul>
           <a href="/home"><li>home</li></a>
-          <a href="/about"><li>about me</li></a>
-          <a href="/"><li>extras</li></a>
+          <a href="/about"><li>about us</li></a>
           </li>
         </ul>
       </nav>
       <section>
         <h1>{{ title }}</h1>
+        <span style="font-size: 12px;"><b>Last modified:</b> {{ page.date }}</span>
         {{ content }}
       </section>
     </main>
