--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -8,26 +8,27 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
   </head>
   <body>
-    <a href="/home" style="text-decoration: none;">
-      <header>
-        <h1>tbh virtual club</h1>
-        <a href="https://neocities.org">
-          <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
-        </a>
-      </header>
-    </a>
-
+    <header>
+      <a href="/home" style="text-decoration: none; color: whitesmoke;">
+        <h1>
+          tbh virtual club
+        </h1>
+      </a>
+      <a href="https://neocities.org">
+        <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
+      </a>
+    </header>
     <main>
       <nav>
         <ul>
           <a href="/home"><li>home</li></a>
           <a href="/about"><li>about us</li></a>
-          </li>
+          <a href="/thanks"><li>join club</li></a>
         </ul>
+        <iframe style="border: #8ac3e5 solid 8px; width: 284px; height: 426px; margin: 0; padding: 0;" src="https://bandcamp.com/EmbeddedPlayer/album=1691200172/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=2201039158/transparent=true/" seamless><a href="https://botanicalhouse.bandcamp.com/album/spring-lovers">Spring Lovers by Minuano</a></iframe>
       </nav>
       <section>
-        <h1>{{ title }}</h1>
-        <span style="font-size: 12px;"><b>Last modified:</b> {{ page.date }}</span>
+        <h2>{{ title }}</h2>
         {{ content }}
       </section>
     </main>
