--- a/assets/style.css
+++ b/assets/style.css
@@ -5,11 +5,11 @@ body {
 }
 
 header {
+  color: gainsboro;
   display: flex;
   justify-content: space-between;
   padding: 20px;
   background: linear-gradient(#8ac3e5 0 10%, #214e94);
-  color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
@@ -20,6 +20,8 @@ header img:hover {
 nav {
   margin: 0px 10px;
   float: left;
+  max-width: 300px;
+  width: 100%;
 }
 
 nav ul {
@@ -36,9 +38,8 @@ nav ul a {
 }
 
 nav ul li {
-  width: 300px;
   font-family: serif;
-  color: white;
+  color: gainsboro;
   font-weight: bold;
   font-size: 32px;
   padding: 20px;
@@ -48,11 +49,11 @@ nav ul li {
 }
 
 nav ul:hover li {
-  filter: brightness(0.8);
+  filter: brightness(0.9);
 }
 
 nav ul li:hover {
-  filter: brightness(1);
+  filter: brightness(1.1);
 }
 
 section {
@@ -83,22 +84,18 @@ section img {
 }
 
 a {
-  color: lightblue;
-}
-
-span {
-  text-wrap: pretty;
+  color: rgb(60, 183, 224);
 }
 
 .bubble {
-  margin-right: -40px;
-  min-width: 200px;
   height: 300px;
+  max-width: 200px;
+  padding: 4px;
   color: black;
   background: linear-gradient(white 0 10%, #8ac3e5);
   border: #8ac3e5 solid 4px;
-  border-radius: 5px;
-  transform: rotate(2deg);
+  border-radius: 4px;
+  transform: rotate(1deg);
   text-decoration: none;
   transition: all 0.2s;
 }
@@ -108,6 +105,7 @@ span {
   padding: 10px;
   color: white;
   background-color: #214e94;
+  border-radius: 2px;
 }
 
 .bubble:nth-child(even) {
