Blog and sounds

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -14,18 +14,22 @@
           tbh virtual club
         </h1>
       </a>
-      <a href="https://neocities.org">
-        <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
-      </a>
     </header>
     <main>
       <nav>
         <ul>
           <a href="/home"><li>home</li></a>
+          <a href="/blog"><li>blog</li></a>
           <a href="/about"><li>about us</li></a>
           <a href="/thanks"><li>join club</li></a>
         </ul>
         <iframe style="border: #8ac3e5 solid 8px; width: 284px; height: 426px; margin: 0; padding: 0;" src="https://bandcamp.com/EmbeddedPlayer/album=1691200172/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/track=2201039158/transparent=true/" seamless><a href="https://botanicalhouse.bandcamp.com/album/spring-lovers">Spring Lovers by Minuano</a></iframe>
+        <div>
+          <a href="https://neocities.org">
+            <img src="https://i.postimg.cc/fWm1xt12/a3.gif" alt="hosted on neocities">
+          </a>
+          <img src="https://64.media.tumblr.com/b4ee01d99adaa22d2eae197a76d26ab5/00ab7168b67b3c99-3d/s100x200/0b9ad6cc3f154da54846ac05f0afffd93a3b8964.gifv" alt="powered by the void">
+        </div>
       </nav>
       <section>
         <h2>{{ title }}</h2>
