--- a/_includes/postlayout.html
+++ b/_includes/postlayout.html
@@ -2,6 +2,6 @@
     layout: layout.html
 ---
 
-<span style="font-size: 12px;"><b>Last modified:</b> {{ page.date | postDate }}</span>
+<span style="font-size: 12px;"><b>Created:</b> {{ page.date | postDate }}</span>
 
 {{ content }}
