--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024, initial-scale=1.0">
     <title>tbh virtual club</title>
     <link href="/assets/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
