--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -7,7 +7,7 @@
     <link href="/assets/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
   </head>
-  <body>
+  <body style="background-image: url('https://64.media.tumblr.com/c571c51c30e6448183d29ac4a4e2edd5/f6eeccece29174dc-93/s250x400/dd6371ad4631a47fd8e3f797f68a8f20956b478d.gif')">
     <header>
       <a href="/home" style="text-decoration: none; color: whitesmoke;">
         <h1>
