--- a/_includes/postlayout.html
+++ b/_includes/postlayout.html
@@ -4,4 +4,13 @@
 
 <span style="font-size: 12px;"><b>Created:</b> {{ page.date | postDate }}</span>
 
-{{ content }}
+<article>
+    {{ content }}
+</article>
+
+<style>
+    article {
+        font-family:'Times New Roman', Times, serif;
+        font-size: 20px;
+    }
+</style>
