--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -48,6 +48,16 @@
     grid-template-columns: 1fr 7fr;
   }
 
+  header {
+    color: gainsboro;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background: linear-gradient(#8ac3e5 0 10%, #214e94);
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+  }
+
+
   nav img:hover {
     transform: scale(120%);
   }
@@ -93,7 +103,7 @@
   section {
     max-width: 100%;
     background-color: white;
-    border: black dashed 2px;
+    border: black dotted 8px;
     margin: 20px; 
     padding: 50px;
   }
