Added music and seventh post

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -20,6 +20,7 @@
         <ul>
           <a href="/home"><li>home</li></a>
           <a href="/blog"><li>blog</li></a>
+          <a href="/music"><li>music</li></a>
           <a href="/about"><li>about us</li></a>
           <a href="/thanks"><li>join club</li></a>
         </ul>
